# chapter4

./: .env  Cargo.toml  Dockerfile  cliff.toml  configuration.yaml
migrations/: 20241021144559_create_subscriptions_table.sql
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: greet.rs  subscriptions.rs
tests/: health_check.rs
