[package]
name = "chapter4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config="0.14"
uuid={version="1",features=["v4"]}
chrono="0.4.15"
[lib]
path = "src/lib.rs"
[[bin]]
path = "src/main.rs"
name = "chapter4"
[dev-dependencies]
reqwest = "0.12"
[dependencies.sqlx]
version="0.6.3"
default-features=false
features=["runtime-actix-rustls","macros","postgres","uuid","chrono","migrate"]
